# personal-ai-layer

./: .env.example  .gitignore  MVP_COMPLETION_SUMMARY.md  QUICK_XCODE_SETUP.md  README.md  SMOKE_TEST_RESULTS.md  XCODE_PROJECT_SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
agent/: mcp_server.py
agent/prompts/: system.md
agent/tools/: calendar_tool.py  mail_tool.py
config/: settings.py  sources.yaml
context/: __init__.py  assembler.py  budget.py
docs/superpowers/plans/: 2026-05-17-personal-ai-ios-mvp.md
docs/superpowers/specs/: 2026-05-17-personal-ai-ios-rebuild-design.md
exports/: __init__.py  graph_serializer.py  ios_export.py
ingestion/: __init__.py  chunker.py  deduplicator.py  embedder.py  entity_extractor.py  pipeline.py
ingestion/sources/: __init__.py  calendar.py  contacts.py  health.py  mail.py  photos.py
ingestion/sources/gdpr_exports/: __init__.py  instagram.py  whatsapp.py
ingestion/sources/macos/: __init__.py  imessage.py  notes.py
ios/PersonalAIAgent/App/: AppContainer.swift  PersonalAIAgentApp.swift  RootView.swift
ios/PersonalAIAgent/Core/Embeddings/: EmbeddingEngine.swift
ios/PersonalAIAgent/Core/Import/: BulkImporter.swift
ios/PersonalAIAgent/Core/LLM/: LLMClient.swift
ios/PersonalAIAgent/Tests/: EmbeddingEngineTests.swift  GraphStoreTests.swift  QueryClassifierTests.swift  RAGPipelineTests.swift  VectorStoreTests.swift
retrieval/: __init__.py  engine.py  fusion.py  reranker.py
scripts/: convert_embedding_model.py  export_cli.py  export_notes.applescript  ingest_gdpr.py  query_cli.py  setup_stores.py
stores/graph_store/: __init__.py  client.py
stores/vector_store/: __init__.py  client.py
sync/: scheduler.py
sync/jobs/: full_sync.py  incremental_sync.py
tests/: conftest.py  test_graph_serializer.py  test_ios_export.py
(+12 files in other folders)
